# synd.io_sugiv_takehome_solution

./: README.md  pyproject.toml
syndio_sugiv_solution/: .gitignore  load_exported_data.py  solution.py
syndio_sugiv_solution/data/: company_a_employee_uploads.csv  input_data.db
syndio_sugiv_solution/model/: models.py
