[tool.poetry]
name = "syndio_sugiv_solution"
version = "0.1.0"
description = "Solution to Syndio Take Home"
authors = ["Sugi V <sugi205@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.39"
pandas = "^1.4.3"
pyarrow = "^8.0.0"
connectorx = "^0.3.0"
polars = "^0.13.55"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
